--- a/pset4_template.qmd
+++ b/pset4_template.qmd
@@ -433,49 +433,33 @@ print(sorted_properly_closed_hospitals)
 ## Download Census zip code shapefile (10 pt) 
 
 1. 
-    a.
 
 ```{python}
-# Set environment variable to attempt SHX file restoration
+import geopandas as gpd
+import pandas as pd
+import matplotlib.pyplot as plt
+
+# Load shapefile and display available columns
 shapefile_path = "/Users/samarnegahdar/Desktop/untitled folder/problem-set-4-summer-jenny/gz_2010_us_860_00_500k.shp"
 
 try:
     zip_shapes = gpd.read_file(shapefile_path)
-    print("Shapefile loaded successfully with SHX restoration.")
+    print("Shapefile loaded successfully.")
+    print("Columns in shapefile:", zip_shapes.columns)
 except Exception as e:
     print("Error loading shapefile:", e)
-print(zip_shapes.columns)
-zip_shapes = gpd.read_file("/Users/samarnegahdar/Desktop/untitled folder/problem-set-4-summer-jenny/gz_2010_us_860_00_500k")
-print(zip_shapes.head())
-print(zip_shapes.columns)
-```
 
-    b. 
+# Ensure column names and check if 'ZCTA5CE10' exists or an equivalent column
+if 'ZCTA5CE10' in zip_shapes.columns:
+    zip_column = 'ZCTA5CE10'
+elif 'ZCTA5' in zip_shapes.columns:
+    zip_column = 'ZCTA5'
+else:
+    print("ZIP code column not found. Available columns:", zip_shapes.columns)
 
-```{python}
 # Step 2: Filter for Texas ZIP codes (starting with 75, 76, 77, 78, or 79)
-texas_zip_shapes = zip_shapes[zip_shapes['ZCTA5CE10'].str.startswith(('75', '76', '77', '78', '79'))]
+texas_zip_shapes = zip_shapes[zip_shapes[zip_column].astype(str).str.startswith(('75', '76', '77', '78', '79'))]
 
-# Step 3: Load the 2016 POS dataset and filter for Texas hospitals
-# Assuming `all_years_data` is a DataFrame containing the cleaned POS data
-pos2016 = all_years_data[(all_years_data['YEAR'] == 2016)]
-
-# Calculate the number of hospitals per ZIP code in Texas for 2016
-hospitals_per_zip = pos2016['ZIP_CD'].value_counts().reset_index()
-hospitals_per_zip.columns = ['ZIP_CD', 'hospital_count']
-
-# Step 4: Merge the hospital counts with the Texas ZIP code shapefile
-# Ensure ZIP code columns are strings for consistent merging
-texas_zip_shapes['ZCTA5CE10'] = texas_zip_shapes['ZCTA5CE10'].astype(str)
-hospitals_per_zip['ZIP_CD'] = hospitals_per_zip['ZIP_CD'].astype(str)
-texas_zip_shapes = texas_zip_shapes.merge(hospitals_per_zip, left_on='ZCTA5CE10', right_on='ZIP_CD', how='left')
-
-# Step 5: Plot the choropleth map
-fig, ax = plt.subplots(1, 1, figsize=(10, 10))
-texas_zip_shapes.plot(column='hospital_count', cmap='Blues', linewidth=0.8, ax=ax, edgecolor='0.8', legend=True)
-ax.set_title("Number of Hospitals per ZIP Code in Texas (2016)")
-ax.set_axis_off()
-plt.show()
 ```
 
 2. 
